test: FileUtilTest